서울 날씨로 수정

--- a/config/config.js.sample
+++ b/config/config.js.sample
@@ -79,8 +79,8 @@ var config = {
 			position: "top_right",
 			header: "Weather Forecast",
 			config: {
-				location: "New York",
-				locationID: "5128581", //ID from http://bulk.openweathermap.org/sample/city.list.json.gz; unzip the gz file and find your city
+				location: "Seoul, KR",
+				locationID: "1835847", //ID from http://bulk.openweathermap.org/sample/city.list.json.gz; unzip the gz file and find your city
 				appid: "1e85d397798849f0d11a0255a31bccdd"
 			}
 		},
